--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -84,7 +84,7 @@
     "max-length": 40,
     "format-icons": {
       "spotify": "",
-      "default": "🎜"
+      "default": ""
     },
     "escape": true,
     "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
