--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,327 +1,73 @@
-"$schema" = "https://starship.rs/config-schema.json"
-
-format = """
-[](fg:red)\
-$directory\
-$username\
-$hostname\
-$container\
-$sudo\
-$shlvl\
-[](fg:red bg:peach)\
-$vcsh\
-$git_branch\
-$git_commit\
-$git_state\
-$git_status\
-$git_metrics\
-[](fg:peach bg:yellow)\
-$cmd_duration\
-$status\
-[](fg:yellow bg:green)\
-$deno\
-$golang\
-$helm\
-$lua\
-$nodejs\
-$php\
-$python\
-$rust\
-[](fg:green bg:blue)\
-$package\
-$nix_shell\
-[](fg:blue bg:mauve)\
-$azure\
-$docker_context\
-$kubernetes\
-[](fg:mauve)\
-$line_break\
-$shell\
-$character"""
-
-add_newline = true
+# Sets user-defined palette
 palette = "catppuccin_mocha"
-
-[directory]
-format = "[$path]($style)[$read_only]($read_only_style)"
-style = 'bg:red fg:#000000'
-read_only_style = 'bg:red fg:#000000'
-read_only = ' '
-use_os_path_sep = false
-
-[username]
-format = '[ $user]($style)'
-style_root = 'bg:red fg:#000000'
-style_user = 'bg:red fg:#000000'
-
-[hostname]
-format = '[$ssh_symbol$hostname ]($style)'
-style = 'bg:red fg:#000000'
-ssh_symbol = '@'
-
-[container]
-format = '[$hostname]($style)'
-style = 'bg:red fg:#000000'
-
-[sudo]
-disabled = false
-format = '[$symbol]($style)'
-style = 'bg:red fg:#000000'
-symbol = '  '
-
-[shlvl]
-style = 'bg:red fg:#000000'
-
-### VCS
-[git_branch]
-symbol = ' '
-format = '[$symbol$branch]($style)'
-style = 'bg:peach fg:#000000'
-
-[hg_branch]
-format = '[$symbol$branch]($style)'
-style = 'bg:peach fg:#000000'
-
-[git_commit]
-format = '[\($hash$tag\)]($style)'
-tag_disabled = false
-tag_symbol = '  '
-style = 'bg:peach fg:#000000'
-
-[git_state]
-format = '[\($state( $progress_current/$progress_total)\)]($style)'
-style = 'bg:peach fg:#000000'
-
-[git_metrics]
-format = '([ +$added]($added_style)[/](bg:peach fg:#000000)[-$deleted]($deleted_style))'
-added_style = 'bg:peach fg:#000000'
-deleted_style = 'bg:peach fg:#000000'
-disabled = false
-
-[git_status]
-format = '([ $all_status$ahead_behind]($style))'
-ahead = "↑"
-behind = "↓"
-conflicted = "!"
-deleted = "×"
-diverged = "↕"
-modified = "~"
-renamed = "»"
-untracked = "+"
-staged = "●"
-stashed = "ﮅ "
-style = 'bg:peach fg:#000000'
-
-[cmd_duration]
-format = '[ﮫ $duration]($style)'
-style = 'bg:yellow fg:#000000'
-show_milliseconds = false
-min_time = 300000
-
-[status]
-style = 'bg:yellow fg:#000000'
-
-### LANGUAGE VERSION INDICATORS
-[c]
-format = '[ $symbol($version(-$name)) ]($style)'
-style = 'bg:green fg:#000000'
-
-[cmake]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[cobol]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[conda]
-format = '[ $symbol$environment ]($style)'
-style = 'bg:green fg:#000000'
-
-[crystal]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[dart]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[deno]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[dotnet]
-format = '[ $symbol($version)( $tfm) ]($style)'
-style = 'bg:green fg:#000000'
-
-[elixir]
-format = '[ $symbol($version \(OTP $otp_version\)) ]($style)'
-style = 'bg:green fg:#000000'
-
-[elm]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[erlang]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[golang]
-symbol = ' '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[haskell]
-symbol = ' '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[helm]
-symbol = 'ﴱ '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[java]
-symbol = ' '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[julia]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[kotlin]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[lua]
-symbol = ' '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[nim]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[nix_shell]
-format = '[ $symbol$state( \($name\)) ]($style)'
-symbol = ' '
-style = 'bg:blue fg:#000000'
-
-[nodejs]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[ocaml]
-format = '[ $symbol($version)(\($switch_indicator$switch_name\)) ]($style)'
-style = 'bg:green fg:#000000'
-
-[perl]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[php]
-symbol = ' '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[pulumi]
-format = '[ $symbol$stack ]($style)'
-style = 'bg:green fg:#000000'
-
-[purescript]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[python]
-symbol = ' '
-format = '[ ${symbol}${pyenv_prefix}(${version})(\($virtualenv\)) ]($style)'
-style = 'bg:green fg:#000000'
-
-[red]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[ruby]
-symbol = ' '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[rust]
-symbol = ' '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[scala]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[spack]
-format = '[ $symbol$environment ]($style)'
-style = 'bg:green fg:#000000'
-
-[swift]
-symbol = ' '
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[vagrant]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[vlang]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-[zig]
-format = '[ $symbol($version) ]($style)'
-style = 'bg:green fg:#000000'
-
-### PACKAGE INDICATORS
-
-[package]
-symbol = ' '
-format = '[ $symbol$version ]($style)'
-style = 'bg:blue fg:#000000'
-
-### CONTEXT INDICATORS
-[aws]
-symbol = ' '
-format = '[ $symbol($profile)(\($region\))(\[$duration\]) ]($style)'
-style = 'bg:mauve fg:#000000'
-
-[docker_context]
-symbol = ' '
-format = '[ $symbol$context ]($style)'
-style = 'bg:mauve fg:#000000'
-
-[gcloud]
-symbol = ' '
-format = '[ $symbol$account(@$domain)(\($region\)) ]($style)'
-style = 'bg:mauve fg:#000000'
-
-[kubernetes]
-symbol = '󱃾 '
-format = '[ $symbol($cluster/$namespace) ]($style)'
-disabled = false
-style = 'bg:mauve fg:#000000'
-
-[openstack]
-symbol = ' '
-format = '[ $symbol$cloud(\($project\)) ]($style)'
-style = 'bg:mauve fg:#000000'
-
-[terraform]
-format = '[ $symbol$workspace ]($style)'
-style = 'bg:mauve fg:#000000'
-
-### STATUS INDICATORS
 
 [character]
 # Note the use of Catppuccin color 'maroon'
-success_symbol = "[[](green) ❯](maroon)"
+success_symbol = "[[❯](green) ❯](maroon)"
 error_symbol = "[❯](red)"
 vimcmd_symbol = "[❮](green)"
+
+[directory]
+truncation_length = 4
+# Catppuccin 'lavender'
+style = "bold lavender"
+
+# palette tables should be last in the config ⚓️
+[palettes.catppuccin_macchiato]
+rosewater = "#f4dbd6"
+flamingo = "#f0c6c6"
+pink = "#f5bde6"
+mauve = "#c6a0f6"
+red = "#ed8796"
+maroon = "#ee99a0"
+peach = "#f5a97f"
+yellow = "#eed49f"
+green = "#a6da95"
+teal = "#8bd5ca"
+sky = "#91d7e3"
+sapphire = "#7dc4e4"
+blue = "#8aadf4"
+lavender = "#b7bdf8"
+text = "#cad3f5"
+subtext1 = "#b8c0e0"
+subtext0 = "#a5adcb"
+overlay2 = "#939ab7"
+overlay1 = "#8087a2"
+overlay0 = "#6e738d"
+surface2 = "#5b6078"
+surface1 = "#494d64"
+surface0 = "#363a4f"
+base = "#24273a"
+mantle = "#1e2030"
+crust = "#181926"
+
+[palettes.catppuccin_frappe]
+rosewater = "#f2d5cf"
+flamingo = "#eebebe"
+pink = "#f4b8e4"
+mauve = "#ca9ee6"
+red = "#e78284"
+maroon = "#ea999c"
+peach = "#ef9f76"
+yellow = "#e5c890"
+green = "#a6d189"
+teal = "#81c8be"
+sky = "#99d1db"
+sapphire = "#85c1dc"
+blue = "#8caaee"
+lavender = "#babbf1"
+text = "#c6d0f5"
+subtext1 = "#b5bfe2"
+subtext0 = "#a5adce"
+overlay2 = "#949cbb"
+overlay1 = "#838ba7"
+overlay0 = "#737994"
+surface2 = "#626880"
+surface1 = "#51576d"
+surface0 = "#414559"
+base = "#303446"
+mantle = "#292c3c"
+crust = "#232634"
 
 [palettes.catppuccin_latte]
 rosewater = "#dc8a78"
