--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,7 +57,7 @@ animations {
     animation = windows, 1, 7, overshot
     animation = windowsOut, 1, 7, overshot, slide
     animation = border, 1, 10, overshot
-    animation = borderangle, 1, 8, overshot
+    animation = borderangle, 1, 120, overshot, loop
     animation = fade, 1, 7, overshot
     animation = workspaces, 1, 7, overshot, slidevert
 }
