--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -54,7 +54,7 @@ animations {
 
     bezier = overshot, 0.05, 0.7, 0.1, 1.05
 
-    animation = windows, 1, 7, overshot
+    animation = windows, 1, 7, overshot, popin
     animation = windowsOut, 1, 7, overshot, slide
     animation = border, 1, 10, overshot
     animation = borderangle, 1, 120, overshot, loop
