--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,6 +56,7 @@ animations {
 
     animation = windows, 1, 7, overshot, popin
     animation = windowsOut, 1, 7, overshot, slide
+    animation = windowsMove, 1, 7, overshot, slide
     animation = border, 1, 10, overshot
     animation = borderangle, 1, 120, overshot, loop
     animation = fade, 1, 7, overshot
