--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,6 +53,7 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = overshot, 0.05, 0.7, 0.1, 1.05
+    bezier = easeInOutQuint, 0.83, 0, 0.17, 1
 
     animation = windows, 1, 7, overshot, popin
     animation = windowsOut, 1, 7, overshot, slide
@@ -60,6 +61,7 @@ animations {
     animation = border, 1, 10, overshot
     animation = borderangle, 1, 120, overshot, loop
     animation = fade, 1, 7, overshot
+    animation = fadeIn, 1, 7, easeInOutQuint
     animation = workspaces, 1, 7, overshot, slidevert
 }
 
