refactor: Refactor hyprland configuration

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,22 +8,23 @@ exec-once=bash ~/.config/hypr/scripts/launch-waybar.sh
 
 ## Input
 input {
-    ## ENG_US ON TOP!
-    kb_layout = us
+## ENG_US ON TOP!
+  kb_layout = us
 
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+      natural_scroll = false
+        middle_button_emulation = true
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 7
+  gaps_in = 7
     gaps_out = 20
     border_size = 2
     col.active_border = rgba(89dcebee) rgba(b4befeee) 45deg
@@ -32,9 +33,9 @@ general {
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+  rounding = 10
     blur = true
     blur_size = 3
     blur_passes = 1
@@ -48,9 +49,9 @@ decoration {
 }
 
 animations {
-    enabled = true
+  enabled = true
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+# Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = overshot, 0.05, 0.7, 0.1, 1.05
     bezier = easeInOutQuint, 0.83, 0, 0.17, 1
@@ -66,14 +67,14 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+  pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # you probably want this
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = true
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+  workspace_swipe = true
 }
 
 misc {
@@ -85,12 +86,12 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, wezterm
-bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, Q, killactive
+bind = $mainMod, M, exit
+bind = $mainMod, V, togglefloating
 bind = $mainMod, D, exec, rofi -show drun
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo # dwindle
+bind = $mainMod, J, togglesplit # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
