feat(hyprland): Improve new window animations with biezers

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,10 +55,11 @@ animations {
 
     bezier = overshot, 0.05, 0.7, 0.1, 1.05
     bezier = easeInOutQuint, 0.83, 0, 0.17, 1
+    bezier = supershot, 0.65, 0, 0.35, 1
 
-    animation = windows, 1, 7, overshot, popin
+    animation = windows, 1, 7, supershot, popin
     animation = windowsOut, 1, 7, overshot, slide
-    animation = windowsMove, 1, 7, overshot, slide
+    animation = windowsMove, 1, 3, supershot, slide
     animation = border, 1, 10, overshot
     animation = borderangle, 1, 120, overshot, loop
     animation = fade, 1, 7, overshot
