--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,14 +56,16 @@ animations {
     bezier = overshot, 0.05, 0.7, 0.1, 1.05
     bezier = easeInOutQuint, 0.83, 0, 0.17, 1
     bezier = supershot, 0.65, 0, 0.35, 1
+    bezier = m4x, 0.16, 1, 0.3, 1
+    bezier = easeOutQuad, 0.5, 1, 0.89, 1.05
 
-    animation = windows, 1, 7, supershot, popin
+    animation = windows, 1, 5, easeOutQuad, popin
     animation = windowsOut, 1, 7, overshot, slide
     animation = windowsMove, 1, 3, supershot, slide
     animation = border, 1, 10, overshot
     animation = borderangle, 1, 120, overshot, loop
     animation = fade, 1, 7, overshot
-    animation = fadeIn, 1, 7, easeInOutQuint
+    animation = fadeIn, 1, 7, easeOutQuad
     animation = workspaces, 1, 7, overshot, slidevert
 }
 
