--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -60,7 +60,7 @@ animations {
     bezier = easeOutQuad, 0.5, 1, 0.89, 1.05
 
     animation = windows, 1, 5, easeOutQuad, popin
-    animation = windowsOut, 1, 7, overshot, slide
+    animation = windowsOut, 1, 7, easeOutQuad, slide
     animation = windowsMove, 1, 3, supershot, slide
     animation = border, 1, 10, overshot
     animation = borderangle, 1, 120, overshot, loop
