feat(hyprland): Add big comments

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,26 +1,26 @@
-## Make the monitor look better
-monitor=,preferred,auto,1
-
-## Set some variables
-env = XCURSOR_SIZE,24
+# ░█▀▀░█▀▀░█▀▄░▀█▀░█▀█░▀█▀░█▀▀
+# ░▀▀█░█░░░█▀▄░░█░░█▀▀░░█░░▀▀█
+# ░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░░░░▀░░▀▀▀
 
 exec-once=bash ~/.config/hypr/scripts/launch-waybar.sh
 
-## Input
+# ░▀█▀░█▀█░█▀█░█░█░▀█▀
+# ░░█░░█░█░█▀▀░█░█░░█░
+# ░▀▀▀░▀░▀░▀░░░▀▀▀░░▀░
+
 input {
-## ENG_US ON TOP!
   kb_layout = us
-
     follow_mouse = 1
-
     touchpad {
       natural_scroll = false
         middle_button_emulation = true
     }
-
-  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+  sensitivity = 0
 }
 
+# ░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░
+# ░█░█░█▀▀░█░█░█▀▀░█▀▄░█▀█░█░░
+# ░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░▀▀▀
 general {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -32,77 +32,101 @@ general {
     layout = dwindle
 }
 
+monitor=,preferred,auto,1
+
+env = XCURSOR_SIZE,24
+
+# ░█▀▄░█▀▀░█▀▀░█▀█░█▀▄░█▀█░▀█▀░▀█▀░█▀█░█▀█
+# ░█░█░█▀▀░█░░░█░█░█▀▄░█▀█░░█░░░█░░█░█░█░█
+# ░▀▀░░▀▀▀░▀▀▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀▀░▀░▀
 decoration {
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
-
+  # ░█▀▄░█▀█░█▀▄░█▀▄░█▀▀░█▀▄
+  # ░█▀▄░█░█░█▀▄░█░█░█▀▀░█▀▄
+  # ░▀▀░░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀
   rounding = 10
-    blur = true
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
 
-    drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(181825ee)
-    inactive_opacity = 0.93
+  # ░█▀▄░█░░░█░█░█▀▄
+  # ░█▀▄░█░░░█░█░█▀▄
+  # ░▀▀░░▀▀▀░▀▀▀░▀░▀
+  blur = true
+  blur_size = 3
+  blur_passes = 1
+  blur_new_optimizations = true
+
+  # ░█▀▀░█░█░█▀█░█▀▄░█▀█░█░█
+  # ░▀▀█░█▀█░█▀█░█░█░█░█░█▄█
+  # ░▀▀▀░▀░▀░▀░▀░▀▀░░▀▀▀░▀░▀
+
+  drop_shadow = false
+  shadow_range = 4
+  shadow_render_power = 3
+  col.shadow = rgba(181825ee)
+  inactive_opacity = 0.93
 }
+
+# ░█▀█░█▀█░▀█▀░█▄█░█▀█░▀█▀░▀█▀░█▀█░█▀█░█▀▀
+# ░█▀█░█░█░░█░░█░█░█▀█░░█░░░█░░█░█░█░█░▀▀█
+# ░▀░▀░▀░▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀▀░▀░▀░▀▀▀
 
 animations {
   enabled = true
 
-# Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+  # ░█▀▄░█▀▀░▀▀█░▀█▀░█▀▀░█▀▄░█▀▀
+  # ░█▀▄░█▀▀░▄▀░░░█░░█▀▀░█▀▄░▀▀█
+  # ░▀▀░░▀▀▀░▀▀▀░▀▀▀░▀▀▀░▀░▀░▀▀▀
 
-    bezier = overshot, 0.05, 0.7, 0.1, 1.05
-    bezier = easeInOutQuint, 0.83, 0, 0.17, 1
-    bezier = supershot, 0.65, 0, 0.35, 1
-    bezier = m4x, 0.16, 1, 0.3, 1
-    bezier = easeOutQuad, 0.5, 1, 0.89, 1.05
+  bezier = overshot, 0.05, 0.7, 0.1, 1.05
+  bezier = easeInOutQuint, 0.83, 0, 0.17, 1
+  bezier = supershot, 0.65, 0, 0.35, 1
+  bezier = m4x, 0.16, 1, 0.3, 1
+  bezier = easeOutQuad, 0.5, 1, 0.89, 1.05
 
-    animation = windows, 1, 5, easeOutQuad, popin
-    animation = windowsOut, 1, 7, easeOutQuad, slide
-    animation = windowsMove, 1, 3, supershot, slide
-    animation = border, 1, 10, overshot
-    animation = borderangle, 1, 120, overshot, loop
-    animation = fade, 1, 7, overshot
-    animation = fadeIn, 1, 7, easeOutQuad
-    animation = workspaces, 1, 7, overshot, slidevert
+  animation = windows, 1, 5, easeOutQuad, popin
+  animation = windowsOut, 1, 7, easeOutQuad, slide
+  animation = windowsMove, 1, 3, supershot, slide
+  animation = border, 1, 10, overshot
+  animation = borderangle, 1, 120, overshot, loop
+  animation = fade, 1, 7, overshot
+  animation = fadeIn, 1, 7, easeOutQuad
+  animation = workspaces, 1, 7, overshot, slidevert
 }
+
+# ░█▀▄░█░█░▀█▀░█▀█░█▀▄░█░░░█▀▀
+# ░█░█░█▄█░░█░░█░█░█░█░█░░░█▀▀
+# ░▀▀░░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀▀▀
 
 dwindle {
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-  pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # you probably want this
+  pseudotile = true
+  preserve_split = true
 }
 
+# ░█▀▀░█▀▀░█▀▀░▀█▀░█░█░█▀▄░█▀▀░█▀▀
+# ░█░█░█▀▀░▀▀█░░█░░█░█░█▀▄░█▀▀░▀▀█
+# ░▀▀▀░▀▀▀░▀▀▀░░▀░░▀▀▀░▀░▀░▀▀▀░▀▀▀
+
 gestures {
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
   workspace_swipe = true
 }
 
-misc {
-  force_hypr_chan = true
-}
+# ░█░█░█▀▀░█░█░█▀▀
+# ░█▀▄░█▀▀░░█░░▀▀█
+# ░▀░▀░▀▀▀░░▀░░▀▀▀
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, wezterm
 bind = $mainMod, Q, killactive
 bind = $mainMod, M, exit
 bind = $mainMod, V, togglefloating
 bind = $mainMod, D, exec, rofi -show drun
-bind = $mainMod, P, pseudo # dwindle
-bind = $mainMod, J, togglesplit # dwindle
+bind = $mainMod, P, pseudo
+bind = $mainMod, J, togglesplit
 
-# Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -114,7 +138,6 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -126,10 +149,8 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
