feat(swww): initial commit

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,6 +3,8 @@
 # ░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░░░░▀░░▀▀▀
 
 exec-once=bash ~/.config/hypr/scripts/launch-waybar.sh
+exec-once=swww init
+exec-once=swww img --transition-type right ~/backgrounds/wall_anime_4K.png
 
 # ░▀█▀░█▀█░█▀█░█░█░▀█▀
 # ░░█░░█░█░█▀▀░█░█░░█░
