feat(hyprshot): initial commit

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -123,6 +123,7 @@ bind = $mainMod, V, togglefloating
 bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
+bind = $mainMod, S, exec, hyprshot -o ~/Screenshots/ -m region
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
