--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -41,16 +41,15 @@
   },
   "battery": {
     "states": {
-      "good": 95,
       "warning": 30,
       "critical": 15
     },
-    "format": "{capacity}% {icon} ",
-    "format-charging": "{capacity}% ⚡ ",
-    "format-plugged": "{capacity}%  ",
-    // "format-good": "", // An empty format will hide the module
-    // "format-full": "",
-    "format-icons": ["", "", "", "", ""]
+    "format": "{icon}",
+    "format-charging": "󰂄",
+    "format-plugged": "",
+    "format-icons": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+    "tooltip": true,
+    "tooltip-format": "{capacity}%"
   },
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
