feat(waybar): Make it really prettier

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -9,11 +9,11 @@
   "modules-center": [],
   "modules-right": [
     "pulseaudio",
-    "clock",
     "battery",
     "cpu",
     "tray",
-    "custom/padding"
+    "custom/padding",
+    "clock"
   ],
   // Modules configuration
   "wlr/workspaces": {
