fix(hyprland): Make the wallpaper not working :'(

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 
 exec-once=bash ~/.config/hypr/scripts/launch-waybar.sh
 exec-once=swww init
-exec-once=swww img --transition-type right ~/backgrounds/wall_anime_4K.png
+exec=swww img --transition-type right ~/backgrounds/wall_anime_4K.png
 
 # ░▀█▀░█▀█░█▀█░█░█░▀█▀
 # ░░█░░█░█░█▀▀░█░█░░█░
@@ -41,7 +41,6 @@ env = XCURSOR_SIZE,24
 # ░█▀▄░█▀▀░█▀▀░█▀█░█▀▄░█▀█░▀█▀░▀█▀░█▀█░█▀█
 # ░█░█░█▀▀░█░░░█░█░█▀▄░█▀█░░█░░░█░░█░█░█░█
 # ░▀▀░░▀▀▀░▀▀▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀▀░▀░▀
-
 decoration {
   # ░█▀▄░█▀█░█▀▄░█▀▄░█▀▀░█▀▄
   # ░█▀▄░█░█░█▀▄░█░█░█▀▀░█▀▄
