--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -121,7 +121,7 @@ bind = $mainMod, RETURN, exec, wezterm
 bind = $mainMod, Q, killactive
 bind = $mainMod, M, exit
 bind = $mainMod, V, togglefloating
-bind = $mainMod, D, exec, rofi -show drun
+bind = $mainMod, D, exec, anyrun
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
 bind = $mainMod, S, exec, hyprshot -o ~/Screenshots/ -m region
