feat(hyprpaper): init

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,8 +3,7 @@
 # ░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░░░░▀░░▀▀▀
 
 exec-once=bash ~/.config/hypr/scripts/launch-waybar.sh
-exec=swww init
-exec=swww img --transition-type right ~/backgrounds/wall_anime_4K.png
+exec=hyprpaper
 
 # ░▀█▀░█▀█░█▀█░█░█░▀█▀
 # ░░█░░█░█░█▀▀░█░█░░█░
