feat(hyprland): Use Flameshot

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -123,7 +123,7 @@ bind = $mainMod, V, togglefloating
 bind = $mainMod, D, exec, anyrun
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
-bind = $mainMod, S, exec, hyprshot -o ~/Screenshots/ -m region
+bind = $mainMod, S, exec, flameshot gui
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
