fix(waybar): rm unneeded padding

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -8,14 +8,7 @@
   "modules-left": ["custom/padding", "wlr/workspaces"],
   // "modules-center": ["mpris"],
   "modules-center": [],
-  "modules-right": [
-    "pulseaudio",
-    "battery",
-    "cpu",
-    "tray",
-    "custom/padding",
-    "clock"
-  ],
+  "modules-right": ["pulseaudio", "battery", "cpu", "tray", "clock"],
   // Modules configuration
   "wlr/workspaces": {
     "disable-scroll": true,
