fix: Hyprland some fixes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,10 +50,11 @@ decoration {
   # ░█▀▄░█░░░█░█░█▀▄
   # ░█▀▄░█░░░█░█░█▀▄
   # ░▀▀░░▀▀▀░▀▀▀░▀░▀
-  blur = true
-  blur_size = 3
-  blur_passes = 1
-  blur_new_optimizations = true
+    blur {
+      size = 1
+        new_optimizations = true
+        xray = true
+    }
 
   # ░█▀▀░█░█░█▀█░█▀▄░█▀█░█░█
   # ░▀▀█░█▀█░█▀█░█░█░█░█░█▄█
@@ -63,7 +64,9 @@ decoration {
   shadow_range = 4
   shadow_render_power = 3
   col.shadow = rgba(181825ee)
-  inactive_opacity = 0.93
+  inactive_opacity = 0.9
+  dim_inactive = true
+  dim_strength = 0.05
 }
 
 # ░█▀█░█▀█░▀█▀░█▄█░█▀█░▀█▀░▀█▀░█▀█░█▀█░█▀▀
