fix(hyprland): Fix that anime girl coming out randomly

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -114,6 +114,10 @@ gestures {
   workspace_swipe = true
 }
 
+misc {
+  disable_hyprland_logo = true
+}
+
 # ░█░█░█▀▀░█░█░█▀▀
 # ░█▀▄░█▀▀░░█░░▀▀█
 # ░▀░▀░▀▀▀░░▀░░▀▀▀
