feat(kitty): init

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,15 +47,6 @@ decoration {
   # ░▀▀░░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀
   rounding = 10
 
-  # ░█▀▄░█░░░█░█░█▀▄
-  # ░█▀▄░█░░░█░█░█▀▄
-  # ░▀▀░░▀▀▀░▀▀▀░▀░▀
-    blur {
-      size = 1
-        new_optimizations = true
-        xray = true
-    }
-
   # ░█▀▀░█░█░█▀█░█▀▄░█▀█░█░█
   # ░▀▀█░█▀█░█▀█░█░█░█░█░█▄█
   # ░▀▀▀░▀░▀░▀░▀░▀▀░░▀▀▀░▀░▀
@@ -124,7 +115,7 @@ misc {
 
 $mainMod = SUPER
 
-bind = $mainMod, RETURN, exec, wezterm
+bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, Q, killactive
 bind = $mainMod, M, exit
 bind = $mainMod, V, togglefloating
