feat: Sync configration

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -122,7 +122,7 @@ bind = $mainMod, V, togglefloating
 bind = $mainMod, D, exec, anyrun
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
-bind = $mainMod, S, exec, flameshot gui
+bind = $mainMod, S, exec, hyprshot -o ~/Pictures/ -m region
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -156,3 +156,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+exec = wl-gammarelay 
+bind= $mainMod,Equal,exec,busctl --user -- set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 6500
+bind= $mainMod,Minus,exec,busctl --user -- set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 1300
