--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/backgrounds/2k_mocha.png
+preload = ~/backgrounds/bigsur.jpg
 
-wallpaper = eDP-1,~/backgrounds/2k_mocha.png
+wallpaper = eDP-1,~/backgrounds/bigsur.jpg
 ipc = off
 splash = true
